mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - port: 3306          # Porta exposta pelo serviço
      targetPort: 3306    # Porta no pod do MySQL
  selector:
    app: mysql
