service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-pdv-app
spec:
  type: LoadBalancer
  selector:
    app: app-pdv-app
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080
